# dynamorio-shadow-stack

./: CMakeLists.txt  debug.h  demo.c  readme.md  readme.txt  shadowstack.c
